# brepkit

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE-APACHE  README.md  brepkit_wasm.d.ts  brepkit_wasm.js  brepkit_wasm_node.cjs  deny.toml  osv-scanner.toml  package-lock.json  package.json
.claude/skills/: README.md
.claude/skills/add-operation/: SKILL.md  reference.md
.claude/skills/analytic-preservation/: SKILL.md  reference.md
.claude/skills/boolean-debugging/: SKILL.md  reference.md
.claude/skills/debugging-doctrine/: SKILL.md  reference.md
.claude/skills/fillet-blend/: SKILL.md  reference.md
.claude/skills/io-formats/: SKILL.md  reference.md
.claude/skills/layer-boundaries/: SKILL.md  reference.md
.claude/skills/numerical-robustness/: SKILL.md  reference.md
.claude/skills/parity-benchmarking/: SKILL.md  reference.md
.claude/skills/pr-workflow/: SKILL.md  reference.md
.claude/skills/profiling/: SKILL.md  reference.md
.claude/skills/release-flow/: SKILL.md  reference.md
.claude/skills/render-verify/: SKILL.md  reference.md
.claude/skills/roadmap/: SKILL.md
.claude/skills/solid-verification/: SKILL.md  reference.md
.claude/skills/tessellation/: SKILL.md  reference.md
.claude/skills/testing/: SKILL.md  reference.md
.claude/skills/wasm-bindings/: SKILL.md  reference.md
.github/workflows/: ci.yml  fuzz.yml  mutants.yml  openzcad-wasm-release.yml  publish.yml
bindings/ts/: package.json
book/: book.toml
book/src/: SUMMARY.md  architecture.md  concepts.md  data-exchange.md  getting-started.md  operation-reference.md  rendering.md  tolerances.md  troubleshooting.md  wasm.md
crates/algo/src/: perf.rs
crates/algo/src/builder/: builder_solid.rs  classify_2d.rs  fill_images_faces.rs  mod.rs  same_domain.rs
crates/algo/src/classifier/: analytic.rs  mod.rs  ray_cast.rs
crates/blend/src/: builder_utils.rs  chamfer_builder.rs  fillet_builder.rs  lib.rs  radius_law.rs  walker.rs
crates/io/: Cargo.toml
crates/io/src/: arena_io.rs  lib.rs  limits.rs
crates/io/src/gltf/: mod.rs  reader.rs
crates/io/src/iges/: mod.rs  reader.rs
crates/io/src/ply/: mod.rs  reader.rs
crates/io/src/step/: mod.rs  reader.rs
crates/io/src/stl/: import.rs  mod.rs  reader.rs
crates/io/src/threemf/: mod.rs  reader.rs
crates/io/tests/: dovetail_cornerclip_intersect_inmem.rs  dovetail_dblcorner_nub_inmem.rs  dovetail_tongue_groove_cut_inmem.rs  fitoffset_groove_mouth_inmem.rs  fitoffset_nub_chain_inmem.rs  gridfinity_cavitycut_inmem.rs  gridfinity_lipfuse_dividers_inmem.rs  relief_meshbool_fallback_inmem.rs  scoop_corner_cylinder_fuse.rs  scoop_fix_inmem.rs  snapclip_export_corner_inmem.rs  socket_assembly_fuse_inmem.rs
crates/io/tests/data/: scoop_bin_box.step  scoop_cavity_0.step  scoop_cavity_1.step  scoop_scoop_0.step
crates/math/: Cargo.toml
crates/math/src/: curves.rs  curves2d.rs  lib.rs  polygon_boolean.rs  surfaces.rs
crates/math/src/nurbs/: basis.rs  curve.rs  evaluator.rs  power_basis.rs  surface.rs
crates/offset/src/: assemble.rs  data.rs  lib.rs  loops.rs
crates/offset/tests/: integration.rs
crates/operations/src/: blend_ops.rs  classify.rs  evolution.rs  extrude.rs  lib.rs  loft.rs  mesh_boolean.rs  offset_v2.rs  revolve.rs  sweep.rs
crates/operations/tests/: blend_integration.rs  boolean_edge_cases.rs  boolean_invariants.rs  boolean_stress.rs  coincident_planes.rs  coincident_proptest.rs  concentric_spheres.rs  perf_64cut_determinism.rs  regress_blend_trim_neighbor_split.rs  tessellate_watertight.rs
crates/render/: Cargo.toml
crates/render/examples/: viewer.rs
crates/render/shaders/: edge.wgsl  mesh.wgsl
crates/render/src/: error.rs  lib.rs  pipeline.rs  viewer.rs
crates/render/tests/: adapter_required.rs
crates/topology/src/: arena.rs  builder.rs  topology.rs
crates/wasm/: Cargo.toml
crates/wasm/pkg/: brepkit_wasm_bg.js  brepkit_wasm_bg.wasm.d.ts  package.json
crates/wasm/src/: helpers.rs  kernel.rs  lib.rs  panics.rs
crates/wasm/src/bindings/: batch.rs  checkpoint.rs  gridfinity_tests.rs  io.rs  measure.rs  nurbs.rs  query.rs  shapes.rs
dev/bench/: data.js
docs/production-readiness/: audit.md  coverage.md  fork-maintenance.md  release-checklist.md  stability-matrix.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/step_reader/: string-comment-separators.step
fuzz/corpus/stl_reader/: triangle.stl
fuzz/fuzz_targets/: common.rs  glb_reader.rs  iges_reader.rs  obj_reader.rs  ply_reader.rs  step_reader.rs  stl_reader.rs  threemf_reader.rs
tests/golden/: README.md
tests/integration/: README.md
xtask/src/: main.rs  wasm.rs
(+36 files in other folders)
