[package]
description = "Multi-format B-Rep data exchange for brepkit (STEP, IGES, STL, 3MF, OBJ, PLY, glTF)"
edition.workspace = true
license.workspace = true
name = "brepkit-io"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
brepkit-math = {workspace = true, features = ["serde"]}
brepkit-operations.workspace = true
brepkit-topology.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
brepkit-topology = {workspace = true, features = ["test-utils"]}
proptest.workspace = true

[lints]
workspace = true
