[package]
description = "Offscreen GPU renderer for brepkit B-Rep solids"
edition.workspace = true
license.workspace = true
name = "brepkit-render"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[features]
default = []
# Interactive viewer window (winit surface + orbit camera + click-to-pick).
# Off by default so headless consumers (CI, the offscreen path) need not pull
# in winit. Enable with `--features window`.
window = ["dep:winit", "dep:log"]

[dependencies]
brepkit-math.workspace = true
brepkit-operations.workspace = true
brepkit-topology.workspace = true

bytemuck = {version = "1", features = ["derive"]}
image = {version = "0.25", default-features = false, features = ["png"]}
pollster = "0.4"
thiserror.workspace = true
wgpu = "29"

# Window/interaction (feature = "window"). winit 0.30 and wgpu 29 both use
# raw-window-handle 0.6, so an `Arc<Window>` satisfies wgpu's surface handle
# traits directly (no separate raw-window-handle dep needed). `log` surfaces
# non-fatal viewer warnings (e.g. a failed pick readback) without the workspace
# print lints that ban eprintln!.
log = {workspace = true, optional = true}
winit = {version = "0.30", optional = true}

[[example]]
name = "viewer"
required-features = ["window"]

[lints]
workspace = true
