[package]
categories = ["wasm", "mathematics", "science"]
description = "WebAssembly bindings for brepkit — browser-native B-Rep solid modeling"
edition.workspace = true
keywords = ["cad", "brep", "wasm", "geometry", "solid-modeling"]
license.workspace = true
name = "brepkit-wasm"
repository.workspace = true
rust-version.workspace = true
version = "2.114.8"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["io"]
io = ["dep:brepkit-io"]

[dependencies]
brepkit-algo.workspace = true
brepkit-check.workspace = true
brepkit-geometry.workspace = true
brepkit-heal.workspace = true
brepkit-io = {workspace = true, optional = true}
brepkit-math.workspace = true
brepkit-operations.workspace = true
brepkit-topology.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true

[lints]
workspace = true
